# boxerui

./: .gitignore  .gitmodules  .pre-commit-config.yaml  Boxer_Install.sh  CMakeLists.txt  CMakeSettings.json
.github/workflows/: .pre-commit-config.yaml  cmake-format.yml  cmake.yml  greetings.yml  stale.yml
BoxerUI/: BoxerUI.vcxproj  BoxerUI.vcxproj.filters
BoxerUI/cmake/: BoxerUIConfig.cmake  boxerui_tests.cmake  find_cuda.cmake
BoxerUI/cmake/opencv_setup/: fetch_xfeatures.cmake  opencv_advanced.cmake  opencv_basic.cmake
BoxerUI/header/: Application.h  Boxer.h  BoxerUI_Controller.h  BoxerUI_Model.h  BoxerUI_View.h  Boxerpch.h  CameraStream_Model.h  CameraStream_View.h  Components_View.h  Controller_input_Header.h  Inputs_Model.h  TextTheme.h
BoxerUI/src/: Application.cpp  Boxer.cpp  BoxerUI_Controller.cpp  BoxerUI_Log.cpp  BoxerUI_Model.cpp  BoxerUI_View.cpp  Boxerpch.cpp  CMakeLists.txt  CameraStream_Model.cpp  CameraStream_View.cpp  Components_View.cpp  Confige.txt  Controller_input.cpp  RCa13140  TextTheme.cpp  main.cpp
BoxerUI/src/Networking/: CMakeLists.txt  a.out  frame_computation.cpp  hashTableTypes.h  hashTables.cpp  intrusiveList.cpp  protocol.h  resources.h  sampleProtocol  sample_codeblock  server.cpp  server.h  server2  server2.cpp  serverBackend.cpp  serverTypes.h  socketLibrary.cpp  test.cpp  test_destinations.cpp  uiBackend.cpp  uiBackend.h
BoxerUI/src/Networking/OldMethods/: intrusiveList.cpp  ramseysHeader.h  server.cpp  server.h  server2  server2.cpp  uiBackend.cpp
BoxerUI/src/Networking/Tests/: compile.sh
BoxerUI/src/Networking/Tests/Clients/: CMakeLists.txt  ClientNewBackend  ClientNewBackend.cpp  client_Bob  client_Bob.cpp  client_Jeff  client_Jeff.cpp  client_John  client_John.cpp  client_Mike  client_Mike.cpp  client_Ricky  client_Ricky.cpp  robot.cpp
BoxerUI/src/Networking/Tests/Ect/: a.out  castingFromArray  castingFromArray.cpp  resourcesTest.cpp
BoxerUI/src/Networking/Tests/NetworkMayham/: reciver  reciver.cpp  sender  sender.cpp
BoxerUI/src/Networking/Tests/Servers/: a.out  core.21951  test  test.cpp  test_server.cpp
BoxerUI/src/RoboCMD/: RoboCMD.cpp  RoboCMD.h  test  test.cpp
BoxerUI/tests/: CMakeLists.txt
BoxerUI/tests/BoxerUI_Tests/BoxerUI_Tests/: BoxerUI_Tests.vcxproj  BoxerUI_Tests.vcxproj.filters  CameraStream_Test.cpp  CameraStream_Test.h  main.cpp
cmake/: Deps.cmake  FindGstreamer.cmake  PostPackageScripts.cmake  find_cuda.cmake
cmake/opencv_setup/: fetch_xfeatures.cmake  opencv_basic.cmake  opencv_cuda.cmake
header/: Application.h  Boxer.h  BoxerUI_Log.h  BoxerUI_Model.h  BoxerUI_View.h  Boxerpch.h  CameraStream_Model.h  CameraStream_View.h  Components_View.h  Events.h  PopulateHeaders.cmake  TextTheme.h  Window.h
header/platform/directx11/: Directx11Window.h
header/platform/opengl/: OpenglWindow.h
src/: Application.cpp  Boxer.cpp  BoxerUI_Controller.cpp  BoxerUI_Log.cpp  BoxerUI_Model.cpp  BoxerUI_View.cpp  CMakeLists.txt  CameraStream_Model.cpp  CameraStream_View.cpp  Events.cpp  TextTheme.cpp  main.cpp
src/platform/directx11/: Directx11Window.cpp
src/platform/opengl/: OpenglWindow.cpp
tests/: CMakeLists.txt
tests/BoxerUI_Tests/: BoxerUI_Tests.sln
tests/BoxerUI_Tests/BoxerUI_Tests/: CameraStream_Test.cpp
